# monk-cli

./: .editorconfig  .gitignore  Cargo.toml  README.md  README.ru.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml
assets/: install.ps1  install.sh
assets/block_page/: index.html  quotes.json  quotes.ru.json
assets/brands/: global.toml  ru.toml
assets/launchd/: dev.monk.monkd.plist
assets/presets/: deepwork.toml  no-chat.toml  no-games.toml  no-news.toml
assets/sites/: global.toml  ru.toml
assets/systemd/: monk.service
assets/windows/: monk.exe.manifest
docs/: PRD-schedules-brands.md  hard-mode.md
locales/: en.yml  ru.yml
src/: audit.rs  clock.rs  error.rs  lib.rs  main.rs  paths.rs  telemetry.rs
src/apps/: cache.rs  linux.rs  macos.rs  mod.rs  resolver.rs  windows.rs
src/blocker/: dns_server.rs  hosts.rs  linux.rs  macos.rs  mod.rs  process.rs  windows.rs
src/blocker/backends/: hosts.rs  mod.rs  resolver_dir.rs  systemd_resolved.rs
src/brands/: mod.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/daemon/: block_page.rs  mod.rs  pidfile.rs  scheduler.rs  server.rs  service.rs  supervisor.rs
src/doctor/: mod.rs
src/i18n/: detect.rs  mod.rs
src/ipc/: mod.rs  peer_cred.rs  protocol.rs
src/onboarding/: mod.rs  presets.rs  wizard.rs
src/session/: lock.rs  mod.rs
src/sites/: mod.rs
src/storage/: mod.rs
src/tui/: app.rs  mod.rs  view.rs  widgets.rs
src/tui/snapshots/: monk__tui__view__snapshot_tests__snapshot_confirm.snap  monk__tui__view__snapshot_tests__snapshot_confirm.snap.new  monk__tui__view__snapshot_tests__snapshot_editor_new.snap  monk__tui__view__snapshot_tests__snapshot_editor_new.snap.new  monk__tui__view__snapshot_tests__snapshot_home.snap  monk__tui__view__snapshot_tests__snapshot_home.snap.new  monk__tui__view__snapshot_tests__snapshot_home_help_overlay.snap  monk__tui__view__snapshot_tests__snapshot_home_help_overlay.snap.new  monk__tui__view__snapshot_tests__snapshot_picker.snap  monk__tui__view__snapshot_tests__snapshot_picker.snap.new
tests/: i18n_keys.rs
