[package]
name = "monk"
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
description = "A cross-platform CLI focus & distraction blocker"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mdportnov/monk-cli"
readme = "README.md"
keywords = ["focus", "blocker", "productivity", "tui", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "monk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.5"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["crossterm", "unstable-widget-ref"] }
tui-big-text = "0.7"
tachyonfx = "0.12"
indicatif = "0.17"
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "io-util", "sync", "process", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
interprocess = { version = "2.2", features = ["tokio"] }
sysinfo = "0.33"
fs-err = "3.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
parking_lot = "0.12"
rust-i18n = "3.1"
inquire = "0.7"
sys-locale = "0.3"
blake3 = "1.5"
hex = "0.4"
machine-uid = "0.5"
rand = "0.9.2"
plist = "1.8.0"
lnk = "=0.6.3"
chrono-tz = "0.10.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "user", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
encoding_rs = "0.8"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.deb]
maintainer = "Mike Portnov <mikport26@gmail.com>"
section = "utility"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/monk", "usr/bin/", "755"],
    ["assets/systemd/monk.service", "lib/systemd/user/", "644"],
    ["README.md", "usr/share/doc/monk/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/monk", dest = "/usr/bin/monk", mode = "755" },
    { source = "assets/systemd/monk.service", dest = "/usr/lib/systemd/user/monk.service", mode = "644" },
]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
insta = { version = "1.41", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
